Endpoint Delete
